[project]
name = "photons"
version = "0"

[project.optional-dependencies]
dev = [
  "tools",
  "lifx-photons-core[web-server]",
  "lifx-photons-arranger",
  "lifx-photons-interactor",
  "lifx-photons-tools",
  "lifx-photons-docs",
  "lifx-photons-test-driver"
]

[tool.uv.sources]
lifx-photons-docs = { workspace = true }
lifx-photons-core = { workspace = true }
lifx-photons-tools = { workspace = true }
lifx-photons-arranger = { workspace = true }
lifx-photons-interactor = { workspace = true }
lifx-photons-test-driver = { workspace = true }

[tool.uv.workspace]
members = [
  "docs",
  "tools",
  "helpers",
  "modules",
  "apps/interactor",
  "apps/arranger"
]

[tool.ruff]
target-version = "py312"
line-length = 150
extend-exclude = [
  ".DS_Store",
  ".pytest_cache",
  "tools/.python",
  "tools/deps",
  "__pycache__"
]

[mypy]
exclude = """
(?x)(
    .DS_Store
    | .pytest_cache 
    | __pycache__
    | ^tools/.python
    | ^tools/deps
    | .*/build/.*
    )"""
mypy_path = "modules:apps/arranger:apps/interactor"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
show_column_numbers = true
