[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-docs"
dynamic = [ "version" ]
dependencies = [
  "sphinx-autobuild==2024.10.3",
  "sphinx-rtd-theme==3.0.2",
  "sphinx==8.1.3"
]

[[project.authors]]
name = "Stephen Moore"
email = "stephen@delfick.com"

[project.license]
text = "MIT"

[project.scripts]
photons-docs = "photons_docs.executor:main"

[project.entry-points."lifx.photons"]
docs = "photons_docs.addon"

[tool.hatch.version]
path = "photons_docs/version.py"

[tool.hatch.build.targets.wheel]
include = [ "/photons_docs" ]
