[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-test-driver"
dynamic = [ "version" ]
dependencies = [
  "typing-extensions==4.12.2",
  "alt-pytest-asyncio==0.9.1",
  "pytest-helpers-namespace==2021.12.29",
  "pytest==8.0.1",
  "sanic==24.6.0",
  "sanic-testing==24.6.0",
  "aiohttp==3.9.3",
  "ulid-py==1.1.0",
  "strcs==0.4.1",
  "attrs==23.2.0"
]

[[project.authors]]
name = "Stephen Moore"
email = "stephen@delfick.com"

[project.license]
text = "MIT"

[tool.hatch.version]
path = "photons_test_driver/version.py"

[tool.hatch.build.targets.wheel]
include = [ "/photons_test_driver" ]
