[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-core"
dynamic = ["version"]
description = "The core modules of the photons framework"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.7"
authors = [
    { name = "Stephen Moore", email = "github@delfick.com" },
]
keywords = [
    "lifx",
    "photons",
]
dependencies = [
    "bitarray>=2.1.2",
    "delfick_project==0.7.9",
    "kdtree==0.16",
    "lru-dict==1.2.0",
    "python-dateutil>=2.8.1",
    "rainbow_logging_handler==2.2.2",
    "ruyaml==0.91.0",
]

[project.optional-dependencies]
tests = [
    "alt-pytest-asyncio==0.6.0",
    "mock==4.0.3",
    "noseOfYeti[black]==2.4.1",
    "pytest-helpers-namespace==2021.12.29",
    "pytest==7.2.0",
]

[project.scripts]
lifx = "photons_app.executor:lifx_main"
run_photons_core_tests = "photons_pytest:run_pytest"

[project.entry-points."lifx.photons"]
canvas = "photons_canvas.addon"
control = "photons_control.addon"
core = "photons_core"
pytest = "photons_pytest"
transport = "photons_transport.addon"

[project.entry-points.pytest11]
lifx_photons_core = "photons_pytest"

[project.urls]
Homepage = "http://github.com/delfick/photons"

[tool.hatch.version]
path = "photons_app/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/photons_app",
    "/photons_canvas",
    "/photons_control",
    "/photons_messages",
    "/photons_products",
    "/photons_protocol",
    "/photons_transport",
    "/photons_core.py",
    "/photons_pytest.py",
]
