[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-core"
dynamic = ["version"]
description = "The core modules of the photons framework"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.12"
authors = [
    { name = "Stephen Moore", email = "github@delfick.com" },
]
keywords = [
    "lifx",
    "photons",
]
dependencies = [
    "bitarray>=2.9.2",
    "delfick_project==0.8.0",
    "kdtree==0.16",
    "lru-dict==1.3.0",
    "python-dateutil>=2.9.0.post0",
    "rainbow_logging_handler==2.2.2",
    "ruyaml==0.91.0",
]

[project.optional-dependencies]
tests = [
    "typing-extensions==4.8.0",
    "alt-pytest-asyncio==0.6.0",
    "noseOfYeti[black]==2.4.8",
    "pytest-helpers-namespace==2021.12.29",
    "pytest==8.0.1",
    "sanic==23.12.1",
    "sanic-testing==23.12.0",
    "aiohttp==3.9.3",
    "ulid-py==1.1.0",
    "strcs==0.4.0",
    "attrs==23.2.0",
]
web-server = [
    "aiohttp>=3.9.0",
    "sanic>=23.12.1",
    "sanic-testing>=23.12.0",
    "ulid-py>=1.1.0",
    "strcs>=0.4.0",
    "attrs>=23.2.0",
    "python-socketio==5.11.2"
]       

[project.scripts]
lifx = "photons_app.executor:lifx_main"
run_photons_core_tests = "photons_pytest:run_pytest"

[project.entry-points."lifx.photons"]
canvas = "photons_canvas.addon"
control = "photons_control.addon"
core = "photons_core"
pytest = "photons_pytest"
transport = "photons_transport.addon"
web_server = "photons_web_server.addon"

[project.entry-points.pytest11]
lifx_photons_core = "photons_pytest"

[project.urls]
Homepage = "http://github.com/delfick/photons"

[tool.hatch.version]
path = "photons_app/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/photons_app",
    "/photons_canvas",
    "/photons_control",
    "/photons_messages",
    "/photons_products",
    "/photons_protocol",
    "/photons_transport",
    "/photons_web_server",
    "/photons_core.py",
    "/photons_pytest.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "/photons_app",
    "/photons_canvas",
    "/photons_control",
    "/photons_messages",
    "/photons_products",
    "/photons_protocol",
    "/photons_transport",
    "/photons_web_server",
    "/photons_core.py",
    "/photons_pytest.py",
]
