[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-arranger"
dynamic = ["version"]
description = "A web interface for changing the user co-ordinates of LIFX tiles"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.11"
authors = [
    { name = "Stephen Moore", email = "github@delfick.com" },
]
keywords = [
    "arranger",
    "lifx",
    "photons",
]
dependencies = [
    "lifx-photons-core>=0.44.1",
    "tornado>=5.1.1",
    "whirlwind-web>=0.11.0",
]

[project.entry-points."lifx.photons"]
arranger = "arranger.addon"

[project.urls]
Homepage = "http://github.com/delfick/photons/apps/arranger"

[tool.hatch.version]
path = "arranger/__init__.py"

[tool.hatch.build]
artifacts = [
    "/arranger/static/dist/prod/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/arranger",
]

[tool.hatch.build.targets.wheel]
include = [
    "/arranger",
]
