[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-arranger"
dynamic = [ "version" ]
description = "A web interface for changing the user co-ordinates of LIFX tiles"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.12"
keywords = [ "arranger", "lifx", "photons" ]
dependencies = [ "lifx-photons-core[web-server]>=0.46.4" ]

[[project.authors]]
name = "Stephen Moore"
email = "github@delfick.com"

[project.entry-points."lifx.photons"]
arranger = "arranger.addon"

[project.urls]
Homepage = "https://photons.delfick.com/apps/arranger/"

[tool.hatch.version]
path = "arranger/__init__.py"

[tool.hatch.build]
artifacts = [ "/arranger/static/dist/prod/*" ]

[tool.hatch.build.targets.sdist]
include = [ "/arranger" ]

[tool.hatch.build.targets.wheel]
include = [ "/arranger" ]
