[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-interactor"
dynamic = ["version"]
description = "A server for interacting with LIFX lights over the LAN"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.7"
authors = [
    { name = "Stephen Moore", email = "github@delfick.com" },
]
keywords = [
    "lifx",
    "photons",
]
dependencies = [
    "aiohttp==3.7.4",
    "aiosqlite==0.17.0",
    "alembic==1.3.2",
    "lifx-photons-core>=0.42.10",
    "netifaces==0.11.0",
    "SQLAlchemy[asyncio]==1.4.23",
    "tornado>=6.1",
    "whirlwind-web==0.12.0",
    "zeroconf==0.36.12",
]

[project.entry-points."lifx.photons"]
interactor = "interactor.addon"

[project.urls]
Homepage = "http://github.com/delfick/photons/apps/interactor"

[tool.hatch.version]
path = "interactor/__init__.py"

[tool.hatch.build]
artifacts = [
    "interactor/database/migrations/*",
    "!interactor/database/migrations/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
    "/interactor",
]
