[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-interactor"
dynamic = ["version"]
description = "A server for interacting with LIFX lights over the LAN"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.12"
authors = [
    { name = "Stephen Moore", email = "github@delfick.com" },
]
keywords = [
    "lifx",
    "photons",
]
dependencies = [
    "aiosqlite==0.17.0",
    "alembic==1.13.1",
    "lifx-photons-core[web-server]>=0.45.3",
    "netifaces==0.11.0",
    "SQLAlchemy[asyncio]==2.0.28",
    "zeroconf==0.36.12",
]

[project.entry-points."lifx.photons"]
interactor = "interactor.addon"

[project.urls]
Homepage = "http://github.com/delfick/photons/apps/interactor"

[tool.hatch.version]
path = "interactor/__init__.py"

[tool.hatch.build]
artifacts = [
    "interactor/database/migrations/*",
    "!interactor/database/migrations/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
    "/interactor",
]

[tool.hatch.build.targets.wheel]
include = [
    "/interactor",
]
