[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "lifx-photons-interactor"
dynamic = [ "version" ]
description = "A server for interacting with LIFX lights over the LAN"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.12"
keywords = [ "lifx", "photons" ]
dependencies = [
  "aiosqlite==0.17.0",
  "alembic==1.13.1",
  "lifx-photons-core[web-server]>=0.46.7",
  "netifaces==0.11.0",
  "SQLAlchemy[asyncio]==2.0.36",
  "zeroconf==0.36.12"
]

[[project.authors]]
name = "Stephen Moore"
email = "github@delfick.com"

[project.urls]
Homepage = "https://photons.delfick.com/apps/interactor/"

[project.entry-points."lifx.photons"]
interactor = "interactor.addon"

[tool.hatch.version]
path = "interactor/__init__.py"

[tool.hatch.build]
artifacts = [
  "interactor_webapp/interactor/build/*",
  "interactor/database/migrations/*",
  "!interactor/database/migrations/*.pyc"
]

[tool.hatch.build.targets.sdist]
include = [ "/interactor" ]

[tool.hatch.build.targets.wheel]
include = [ "/interactor" ]
